changing was done

--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
             <picture>
               <source
                 media="(min-width:1024px)"
-                src="images/comforts__desktop.svg"
+                srcset="images/comforts__desktop.svg"
               />
               <source
                 media="(max-width:640px)"
-                src="images/comforts__mobile.svg"
+                srcset="images/comforts__mobile.svg"
               />
               <img src="images/comforts__tablet.svg" alt="phones" />
             </picture>
